navbar css position set to fixed, added margin to main tag,fixed modal z-index.

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,6 +4,10 @@
     padding: 20px;
     justify-content: space-between;
     align-items: center;
+    position:fixed;
+    z-index: 1;
+    width: 100vw;
+    top:0;
 }
 
 
