--- a/src/containers/Modals/Modals.scss
+++ b/src/containers/Modals/Modals.scss
@@ -11,5 +11,6 @@
         background-color: #0006;
         backdrop-filter: blur(4px);
         transition: all .5s ease;
+        z-index: 1050;
     }
 }
