--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,7 @@ html {
 body.modal-open {
     overflow: hidden;
 }
+
+main {
+    margin-top: 70px;
+}
